[package]
name = "ykoath"
version = "0.1.1"
authors = ["Emery Rose Hall <emery@deadcanaries.org>"]
edition = "2018"
license = "LGPL-3.0"
repository = "https://gitlab.com/emrose/ykoath-rs"
description = "GTK indicator applet and library for getting OATH codes from YubiKeys"

[dependencies]
byteorder = "1.2.7"
pcsc = "1"
libappindicator = "0.4.0"
gtk = "0.4.0"
gtk-sys = "0.6.0"
notify-rust = "3.5.0"
clipboard = "0.5.0"
